<resources>
    <string name="app_name">OnRoadWheels</string>
    <string name="gender">Gender : </string>
    <string name="loginHint">Enter Mobile Number</string>
    <string name="goButton">GO!</string>
    <string name="nameHint">Enter Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="emer_no_hint">Emergency Number</string>
    <string name="dlno">Enter DL No.</string>
    <string name="bloodgp">Enter Blood Group</string>
    <string name="age">Age :</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="vehicleNumber">Enter Vehicle Number</string>
    <string name="vehicleModel">Enter Vehicle Model</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="car_model">Car Model</string>
    <string name="bloodgrp">Blood Group</string>
    <string name="disease">Disease(if Any)</string>

</resources>
