<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    tools:context="com.example.suneet.onroadwheels.EditProfile">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/userImage"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="DL NO"
        android:textColor="#000"
        android:gravity="center"
        android:id="@+id/editProfileDLNO"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/name"
            android:id="@+id/editProfileName"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/address"
            android:id="@+id/editProfileAddress"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:id="@+id/editProfileAge"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editProfileOccupation"
            android:hint="@string/occupation"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editProfileCarModel"
            android:hint="@string/car_model"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editProfileBloodGroup"
            android:editable="false"
            android:hint="@string/bloodgrp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editProfileDiseases"
            android:hint="@string/disease"/>


</LinearLayout>

</LinearLayout>
