<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_height="match_parent"
    tools:context="com.example.suneet.onroadwheels.Registration">

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/userImage"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/userMobNo"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:hint="Mobile Number"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:hint="@string/nameHint"
            android:textColor="@color/colorText"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/uMale"
                android:paddingRight="20dp"
                android:textColor="@color/colorText"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/female"
                android:id="@+id/uFemale"/>
        </RadioGroup>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uEmergencyNo"
            android:hint="@string/emer_no_hint"
            android:textColor="@color/colorText"
            android:inputType="number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uDLNO"
            android:hint="@string/dlno"
            android:textColor="@color/colorText"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bloodgp"
            android:textColor="#000"
            android:gravity="center"
            android:textSize="20sp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regspinner">

        </Spinner>
    </LinearLayout>
    <Button
        android:id="@+id/buttonNext"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#AA0014"
        android:text="NEXT" />




</LinearLayout>
